# Autosar-Adaptive-Application

./: README.md
sample-applications/applications/DataReciever/: CMakeLists.txt  DataReciever.arxml
sample-applications/applications/DataReciever/include/: DataReciever_component.h  gpio.h
sample-applications/applications/DataReciever/src/: DataReciever_component.cpp  gpio.cpp  main.cpp
sample-applications/applications/DataSender/: CMakeLists.txt  DataSender.arxml
sample-applications/applications/DataSender/include/: DataSender_component.h  VehicleData.h
sample-applications/applications/DataSender/src/: DataSender_component.cpp  VehicleData.cpp  main.cpp
sample-applications/dlt/: dltlogsink_not_machine_based.arxml
sample-applications/interfaces/: DistanceDataInterface.arxml  DistanceDataInterface_someip.arxml
sample-applications/machines/FusionMachine/model/: machine_manifest.arxml
sample-applications/machines/FusionMachine/model/processes/: DataReciever_execution_manifest.arxml  DataReciever_process_design.arxml  DataReciever_service_instance_manifest.arxml
sample-applications/machines/RadarMachine/model/: machine_manifest.arxml
sample-applications/machines/RadarMachine/model/processes/: DataSender_execution_manifest.arxml  DataSender_process_design.arxml  DataSender_service_instance_manifest.arxml
yocto-layers/meta-ara/recipes-apd/machines/: apd-fusionmachine-DataReciever.bb
